Accordion transformado em classe

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </form>
     </div>
   </section>
-  <script type="module" src="main/main.js"></script>
+  <script src="main/main.js"></script>
 </body>
 
 </html>
